vue-H5和小程序交互

--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -18,7 +18,7 @@
      margin: 0;
      padding: 0;
      border: 0;
-     font-size: 100%;
+     font-size: 24px;
      font-weight: normal;
      border: 0;
      vertical-align: baseline;
